# oss-repo-template

./: .gitignore  LICENSE  README.md  first.py  index.md
labs/lab-01/: lab01.md  report.md
labs/lab-01/regex-prac/: ex-text01.txt  ex-text02.txt
labs/lab-02/: lab2.md  report.md  submitty.txt
labs/lab-03/: Lab3.md  README.md
labs/lab-04/: Lab4.md  README.md
labs/lab-05/: README.md
labs/lab-05/Part1_CMake_Tutorial/Step4/: ctest_out.txt
labs/lab-05/Part2/: CMakeLists.txt  Makefile
labs/lab-05/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step2/: tutorial.cxx
labs/lab-05/Step4/: CMakeLists.txt
labs/lab-05/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab-06/: Lab6.md  plot_words.py
